# notifications

./: .env  Dockerfile  README.md  README.ru.md  docker-compose.yml  pyproject.toml  setup.cfg
distribution/: admin.py  apps.py  choices.py  models.py  serializers.py  signals.py  tasks.py  views.py
distribution/tests/: conftest.py  data_for_tests.py
distribution/tests/integration/: test_client.py  test_distribution.py  test_distribution_api_calls.py  test_message_essence.py
distribution/tests/unit/: test_models.py
notifications/: celery.py  settings.py  urls.py  yasg.py
